# frenyum-node

./: Cargo.toml  LICENSE  README.md
chain/chain-utils/: Cargo.toml
chain/chain-utils/src/: types.rs
chain/chain_utils/: Cargo.toml
chain/network/: Cargo.toml
chain/network/src/peer/: peer.rs
chain/network/src/utils/src/: types.rs
chain/utils/src/: types.rs
core/core-utils/: Cargo.toml
core/core-utils/src/: lib.rs  timestamp.rs
core/core_utils/: Cargo.toml
core/core_utils/src/configs/: db.rs
core/crypto/: Cargo.toml
core/crypto/benches/: ed25519.rs
core/crypto/src/: ed25519.rs  hash.rs  lib.rs
core/primvites/: Cargo.toml
core/primvites/benches/: model_bench.rs
core/primvites/src/: .block_header.rs.swp  .transaction.rs.swo  block.rs  block_header.rs  lib.rs  transaction.rs
core/storage/: Cargo.toml
core/storage/src/: .rocksdb.rs.swp  column.rs  db.rs  lib.rs  rocksdb.rs
core/storage/src/db/: iter.rs  mod.rs  rocksdb.rs  snapshot.rs  transaction.rs  write_batch.rs
core/utils/: Cargo.toml
core/utils/src/: gas.rs  lib.rs  timestamp.rs
core/utils/src/configs/: Cargo.toml  db.rs
core/utils/src/configs/src/: db.rs
crypto/: Cargo.toml
crypto/src/: ed25519.rs  hash.rs
frenyum/: main.rs
primvites/: Cargo.toml
src/: main.rs
