[workspace]
members = [
    "core/primvites",
    "core/crypto",
    "core/utils", 
    "core/storage",
    "core/utils/congifs",
]

[package]
name = "frenyum-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frenyum-node"
path = "frenyum/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
