[workspace]
members = [
    "core/primvites",
    "core/crypto",
    "core/core_utils", 
    "core/storage", "chain/network", "chain/chain_utils",
]

[package]
name = "frenyum-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frenyum-node"
path = "frenyum/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
