[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1", features = ["derive"] }
ed25519-dalek = "1.0.1"
rand = "0.7"
ring = "0.16.20"
bincode = "1.3.3"

