[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1", features = ["derive"] }
ed25519-dalek = "1.0.1"
rand = "0.8"
ring = "0.16.20"
bincode = "1.3.3"
hex = "0.4.3"
sha3 = "0.10.8"
criterion = "0.5.1"
rand_core = "0.6.4"

[[bench]]
name = "ed25519"
herness = false

