[package]
name = "primvites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
crypto = { path = "../crypto" }
ethereum-types = "0.14.1"
criterion = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
anyhow = "1.0.80"
bincode = "1.3.3"
serde = {version = "1.0.197", features = ["derive"]}

[[bench]]
name = "model_bench"
harness = false
